manifests/falco-daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: falco
  namespace: kube-system
spec:
  selector:
    matchLabels: { app: falco }
  template:
    metadata:
      labels: { app: falco }
    spec:
      serviceAccountName: falco
      containers:
        - name: falco
          image: falcosecurity/falco:0.38.2
          securityContext:
            privileged: true
          args: ["-K","pprof_disabled","-pk"]
          volumeMounts:
            - { name: devfuse, mountPath: /dev/fuse }
            - { name: dev, mountPath: /host/dev }
            - { name: proc, mountPath: /host/proc, readOnly: true }
            - { name: boot, mountPath: /host/boot, readOnly: true }
            - { name: libmodules, mountPath: /host/lib/modules, readOnly: true }
            - { name: usr, mountPath: /host/usr, readOnly: true }
            - { name: etc, mountPath: /host/etc, readOnly: true }
            - { name: falco-rules, mountPath: /etc/falco/rules.d }
      volumes:
        - { name: devfuse, hostPath: { path: /dev/fuse } }
        - { name: dev, hostPath: { path: /dev } }
        - { name: proc, hostPath: { path: /proc } }
        - { name: boot, hostPath: { path: /boot } }
        - { name: libmodules, hostPath: { path: /lib/modules } }
        - { name: usr, hostPath: { path: /usr } }
        - { name: etc, hostPath: { path: /etc } }
        - { name: falco-rules, emptyDir: {} }
