manifests/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: default
spec:
  podSelector: {}
  policyTypes: ["Ingress","Egress"]
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-nginx-same-ns
  namespace: default
spec:
  podSelector:
    matchLabels: { app: demo-nginx }
  ingress:
    - from:
        - podSelector: {}
      ports:
        - protocol: TCP
          port: 80
